Suite des corrections sur le bug d'affichage pour la version mobile

--- a/assets/animal.scss
+++ b/assets/animal.scss
@@ -18,7 +18,7 @@
                 width: 100%;
                 height: 50vh;
                 transition: all 1s;
-
+                
                 img{
                     width: 100%;
                     height:100%;
@@ -37,7 +37,7 @@
                     align-items: center;
                     flex-direction: column;
                     transition: all 0.5s;
-                    transform: translateY(0%);
+                    transform: translateY(5%);
                     opacity: 0;
 
                     h5,h6{
@@ -54,6 +54,7 @@
                     }
                     a{
                         border: solid 1px white !important;
+                        display: none !important;
                         @include aFront;
                     }
                 }
@@ -61,6 +62,9 @@
                 .infos.active{
                     opacity: 1;
                     transform: translateY(0);
+                    a{
+                        display: block !important;
+                    }
                 }
             }
         }
